fix record not response vaccine name at school, event not response nurse, get medical request by status